--- a/project.html
+++ b/project.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="color-modes.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhamnad Ayyash</title>
@@ -16,106 +17,256 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
+
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+
+        .b-example-divider {
+            width: 100%;
+            height: 3rem;
+            background-color: rgba(0, 0, 0, .1);
+            border: solid rgba(0, 0, 0, .15);
+            border-width: 1px 0;
+            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+        }
+
+        .b-example-vr {
+            flex-shrink: 0;
+            width: 1.5rem;
+            height: 100vh;
+        }
+
+        .bi {
+            vertical-align: -.125em;
+            fill: currentColor;
+        }
+
+        .nav-scroller {
+            position: relative;
+            z-index: 2;
+            height: 2.75rem;
+            overflow-y: hidden;
+        }
+
+        .nav-scroller .nav {
+            display: flex;
+            flex-wrap: nowrap;
+            padding-bottom: 1rem;
+            margin-top: -1px;
+            overflow-x: auto;
+            text-align: center;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        .btn-bd-primary {
+            --bd-violet-bg: #712cf9;
+            --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+
+            --bs-btn-font-weight: 600;
+            --bs-btn-color: var(--bs-white);
+            --bs-btn-bg: var(--bd-violet-bg);
+            --bs-btn-border-color: var(--bd-violet-bg);
+            --bs-btn-hover-color: var(--bs-white);
+            --bs-btn-hover-bg: #6528e0;
+            --bs-btn-hover-border-color: #6528e0;
+            --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+            --bs-btn-active-color: var(--bs-btn-hover-color);
+            --bs-btn-active-bg: #5a23c8;
+            --bs-btn-active-border-color: #5a23c8;
+        }
+
+        .bd-mode-toggle {
+            z-index: 1500;
+        }
+
+        .bd-mode-toggle .dropdown-menu .active .bi {
+            display: block !important;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg bg-color-black navbar-light fixed-top">
-        <div class="container-fluid">
-            <!-- logo -->
-            <a class="navbar-brand fonts-Poppins,sans-serif fw-bold fs-3" href="home.html">MUHAMMAD AYYASH</a>
-            <!-- toggle -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            <!-- slide bar -->
-            <div 
-                class="slidebar offcanvas offcanvas-start" 
-                tabindex="-1" 
-                id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel"
-            >
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" 
-                    id="offcanvasNavbarLabel">MUHAMMAD AYYASH</h5>
-                    <button 
-                        type="button" 
-                        class="btn-close" 
-                        data-bs-dismiss="offcanvas" 
-                        aria-label="Close">
+    <!-- theme -->
+
+    <body>
+        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+            <symbol id="check2" viewBox="0 0 16 16">
+                <path
+                    d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+            </symbol>
+            <symbol id="circle-half" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
+            </symbol>
+            <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+                <path
+                    d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
+                <path
+                    d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+            </symbol>
+            <symbol id="sun-fill" viewBox="0 0 16 16">
+                <path
+                    d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+            </symbol>
+        </svg>
+
+        <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+            <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme"
+                type="button" aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
+                <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
+                    <use href="#circle-half"></use>
+                </svg>
+                <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
+                        aria-pressed="false">
+                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
+                            <use href="#sun-fill"></use>
+                        </svg>
+                        Light
+                        <svg class="bi ms-auto d-none" width="1em" height="1em">
+                            <use href="#check2"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
+                        aria-pressed="false">
+                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
+                            <use href="#moon-stars-fill"></use>
+                        </svg>
+                        Dark
+                        <svg class="bi ms-auto d-none" width="1em" height="1em">
+                            <use href="#check2"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center active"
+                        data-bs-theme-value="auto" aria-pressed="true">
+                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
+                            <use href="#circle-half"></use>
+                        </svg>
+                        Auto
+                        <svg class="bi ms-auto d-none" width="1em" height="1em">
+                            <use href="#check2"></use>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <!-- theme end -->
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
+            <div class="container-fluid">
+                <!-- logo -->
+                <a class="navbar-brand fonts-Poppins,sans-serif fw-bold fs-3" href="home.html">MUHAMMAD AYYASH</a>
+                <!-- toggle -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fonts-Poppins,sans-serif fw-bold fs-5">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="education.html">Educations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="experience.html">Intership Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Project</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="activity.html">Activity</a>
-                        </li>
-                    </ul>
+                <!-- slide bar -->
+                <div class="slidebar offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">MUHAMMAD AYYASH</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                        </button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul
+                            class="navbar-nav justify-content-end flex-grow-1 pe-3 fonts-Poppins,sans-serif fw-bold fs-5">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">About me</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="education.html">Educations</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="experience.html">Intership Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Project</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="activity.html">Activity</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-    <!-- Navigation Bar End -->
+        </nav>
+        <!-- Navigation Bar End -->
 
-    <!-- Menu -->
-    <div class="container-project">
-        <div class="project1">
-            <img src="crank.png">
-            <h1 class="project-h">Crankshaft Project</h1>
-            <a href="crank.html"><button>Details</button></a>
-        </div>
-        <div class="project2">
-            <img src="Jaw.png">
-            <h1 class="project-h">Jaw Project</h1>
+        <!-- Menu -->
+        <div class="container-project">
+            <div class="project1">
+                <img src="crank.png">
+                <h2 class="project-h">Crankshaft Project</h2>
+                <a href="crank.html"><button>Details</button></a>
+            </div>
+            <div class="project2">
+                <img src="Jaw.png">
+                <h2 class="project-h">Jaw Project</h2>
 
-            <a href="jaw.html"><button>Details</button></a>
-        </div>
-        <div class="project3">
-            <img src="mix.png">
-            <h1 class="project-h">Mixing machine project</h1>
+                <a href="jaw.html"><button>Details</button></a>
+            </div>
+            <div class="project3">
+                <img src="mix.png">
+                <h2 class="project-h">Mixing machine project</h2>
 
-            <a href="mix.html"><button>Details</button></a>
+                <a href="mix.html"><button>Details</button></a>
+            </div>
         </div>
-    </div>
-    <!-- Menu end -->
+        <!-- Menu end -->
 
-    <!-- Fotter -->
-    <div class="container-foter">
-        <h2 class="fotter1"> CONTACT</h2>
-        <div class="foter-1">
-            <img class="gambar" src="Email.png">
-            <p class="p-foter"> <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=mayyash174@gmail.com">
-                    mayyash174@gmail.com</a> </p>
+        <!-- Fotter -->
+        <div class="container-foter">
+            <h2 class="fotter1"> CONTACT</h2>
+            <div class="foter-1">
+                <img class="gambar" src="Email.png">
+                <p class="p-foter"> <a
+                        href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=mayyash174@gmail.com">
+                        mayyash174@gmail.com</a> </p>
+            </div>
+            <div class="foter-2">
+                <img class="gambar" src="phone.png">
+                <p class="p-foter"> <a href="http://wa.me/62895373640584"> +62895373640584</a> </p>
+            </div>
+            <div class="foter-3">
+                <img class="gambar" src="linkedin.png">
+                <p class="p-foter"> <a href="https://www.linkedin.com/in/muhammad-ayyash"> Muhammad Ayyash</a> </p>
+            </div>
+            <div class="foter-4">
+                <p class=""></p>
+            </div>
         </div>
-        <div class="foter-2">
-            <img class="gambar" src="phone.png">
-            <p class="p-foter"> <a href="http://wa.me/62895373640584"> +62895373640584</a> </p>
+        <!-- Fotter end -->
         </div>
-        <div class="foter-3">
-            <img class="gambar" src="linkedin.png">
-            <p class="p-foter"> <a href="https://www.linkedin.com/in/muhammad-ayyash"> Muhammad Ayyash</a> </p>
-        </div>
-        <div class="foter-4">
-            <p class=""></p>
-        </div>
-    </div>
-    <!-- Fotter end -->
-    </div>
-</body>
+    </body>
 
 </html>
