--- a/activity.html
+++ b/activity.html
@@ -161,57 +161,64 @@
         </div>
     <!-- theme end -->
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
-        <div class="container-fluid">
-            <!-- logo -->
-            <a class="navbar-brand fonts-Poppins,sans-serif fw-bold fs-3" href="home.html">MUHAMMAD AYYASH</a>
-            <!-- toggle -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            <!-- slide bar -->
-            <div 
-                class="slidebar offcanvas offcanvas-start" 
-                tabindex="-1" 
-                id="offcanvasNavbar"
-                aria-labelledby="offcanvasNavbarLabel"
-            >
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" 
-                    id="offcanvasNavbarLabel">MUHAMMAD AYYASH</h5>
-                    <button 
-                        type="button" 
-                        class="btn-close" 
-                        data-bs-dismiss="offcanvas" 
-                        aria-label="Close">
-                </button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fonts-Poppins,sans-serif fw-bold fs-5">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="education.html">Educations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="experience.html">Intership Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="project.html">Project</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Activity</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <!-- Navigation Bar End -->
+    <nav class="navbar navbar-expand-lg navbar-dark na bg-dark shadow-sm fixed-top">
+      <div class="container-fluid">
+          <!-- logo -->
+          <a class="navbar-brand navbar-dark fonts-Poppins,sans-serif fw-bold fs-4" 
+              href="home.html">MUHAMMAD AYYASH</a>
+          <!-- toggle -->
+          <button class="navbar-toggler shadow-none border-0" 
+              type="button" 
+              data-bs-toggle="offcanvas" 
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar" 
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- side bar -->
+          <div class="sidebar offcanvas offcanvas-start navbar-dark bg-dark " 
+              tabindex="-1" 
+              id="offcanvasNavbar"
+              aria-labelledby="offcanvasNavbarLabel">
+          <!-- sidebar-header -->
+              <div class="offcanvas-header text-white border-bottom">
+                  <h5 class="offcanvas-title navbar-dark fonts-Poppins,sans-serif fw-bold fs-4" 
+                      id="offcanvasNavbarLabel">MUHAMMAD AYYASH</h5>
+                  <button 
+                      type="button"
+                      class="btn-close btn-close-white"
+                      color="white" 
+                      data-bs-dismiss="offcanvas" 
+                      aria-label="Close">
+                  </button>
+              </div>
+          <!--sidebar-body  -->
+              <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 fonts-Poppins,sans-serif fw-bold fs-9">
+                      <li class="nav-item mx-2">
+                          <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link" href="about.html">About me</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link" href="education.html">Educations</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link" href="experience.html">Intership Experience</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link" href="project.html">Project</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link active" href="activity.html">Activity</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </nav>
+  <!-- Navigation Bar End -->
 
     <!-- Menu -->
     <div class="container-activity">
@@ -235,6 +242,7 @@
     <!-- Menu end -->
 
     <!-- Fotter -->
+    <hr class="hr-blurry">
     <div class="container-foter">
         <h2 class="fotter1"> CONTACT</h2>
         <div class="foter-1">
