--- a/mix.html
+++ b/mix.html
@@ -299,7 +299,7 @@
                     </img>
                 </div>
                 <div class="col-md-6">
-                    <table class="partfiless-table">
+                    <table class="des-mix">
                         <tr>
                             <th class="no">NO</th>
                             <th class="partname">PART NAME</th>
