--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@
           2024. I am a likes learning new things, fastleaner and have a high curiosity. I had intership experience
           at PT. TMMIN, a car repair shop and PT. FSCM</p>
         <p>My activity during college, i had been joined as a member of the secretariat and workshop division in
-          Himpunan Mahasiswa Mesin UNTAG which honed my softskill such as team work, problem solving and time management I had
+          Himpunan Mahasiswa Mesin UNTAG which honed my softskill such as team work, problem solving and time management. I had
           participated in solidworks design competitions organized and Occupational Health and Safety seminar</p>
         <p>I have been interesting in the automotive field, im my house i often repaired motorcycles with my friend.
           Recently, i had been taken english course for improved my english skill and i am active as a job seekers</p>
